--- a/.i3/config
+++ b/.i3/config
@@ -23,21 +23,15 @@ font pango:DejaVu Sans Mono 10
 new_window none
 
 # App Launching
-bindsym $mod+ctrl+c exec chromium --disk-cache-dir=/tmp/cache &
-bindsym $mod+ctrl+l exec leafpad &
-bindsym $mod+ctrl+v exec vlc &
-bindsym $mod+Print exec scrot --quality 100
-bindsym $mod+ctrl+p exec pidgin &
-bindsym $mod+ctrl+s exec shutter &
+bindsym $mod+ctrl+c exec conkeror &
+bindsym $mod+Print exec scrot --quality 90 &
 bindsym $mod+p exec dmenu_run
 
 # Keybinding
 bindsym XF86AudioLowerVolume exec dvol -d 5
 bindsym XF86AudioRaiseVolume exec dvol -i 5
 bindsym XF86AudioMute exec dvol -t
-#bindsym XF86AudioLowerVolume exec amixer set Master 5- unmute && exec dvol -d 5
-#bindsym XF86AudioRaiseVolume exec amixer set Master 5+ unmute && exec dvol -i 5
-#bindsym XF86AudioMute exec amixer set Master toggle-mute && exec dvol -t
+bindsym $mod+ctrl+e exec conkeror -f unfocus
 
 # App Auto Launching
 exec wicd-client --tray &
@@ -47,7 +41,6 @@ exec urxvtd -q -o -f &
 floating_modifier $mod
 
 # start a terminal
-#bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec urxvtc
 
 # kill focused window
@@ -166,11 +159,6 @@ bindsym $mod+r mode "resize"
 client.background #242424
 
 # colors
-#client.focused		#4c7899	#242424	#17b2ff	#ffcfaf
-#client.focused_inactive	#3f3f3f	#3F3F3F	#7f9f7f	#3f3f3f
-#client.unfocused	#3f3f3f	#3F3F3F	#DCDCCC	#3f3f3f
-#client.urgent		#dca3a3	#dca3a3	#DCDCCC	#3f3f3f
-
 client.focused		#4c7899	#3F3F3F	#17b2ff	#ffcfaf
 client.focused_inactive	#3f3f3f	#3F3F3F	#000000 #000000
 client.unfocused	#3f3f3f	#3F3F3F	#000000	#000000
