--- a/.i3/config
+++ b/.i3/config
@@ -168,7 +168,7 @@ client.urgent		#dca3a3	#dca3a3	#DCDCCC	#3f3f3f
 # finds out, if available)
 bar {
 #        status_command i3status
-#    status_command $HOME/bin/conky-i3bar
+    status_command $HOME/bin/conky-i3bar
     font pango:DejaVu Sans Mono 8
 
 	colors {
